<package format="2">
  <name>ackermann_steering_controller_isolated</name>
  <version>0.13.4</version>
  <description>ackermann_steering_controller_isolated</description>

  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ros_controllers</url>
  <url type="bugtracker">https://github.com/MoriKen254/ackermann_steering_controller_isolated/issues</url>
  <url type="repository">https://github.com/MoriKen254/ackermann_steering_controller_isolated/</url>

  <author>Masaru Morita</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ackermann_steering_controller</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>four_wheel_steering_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
